--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -10,7 +10,7 @@ jobs:
       - name: Push to Docker Hub
         uses: docker/build-push-action@v1
         with:
-          username: ${{ secrets.actor }}
-          password: ${{ secrets.GITHUB_TOKEN }}
-          repository: my-docker-hub-namespace/my-docker-hub-repository
+          username: ${{ secrets.DOCKER_USERNAME }}
+          password: ${{ secrets.DOCKER_PASSWORD }}
+          repository: arvindosub/devops_project
           tag_with_ref: true
