--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -1,5 +1,7 @@
 name: Publish Docker image
-on: [push]
+on:   
+  release:
+    types: [published]
 jobs:
   push_to_registry:
     name: Push Docker image to Docker Hub
@@ -10,7 +12,7 @@ jobs:
       - name: Push to Docker Hub
         uses: docker/build-push-action@v1
         with:
-          username: ${{ secrets.DOCKER_USERNAME }}
-          password: ${{ secrets.DOCKER_PASSWORD }}
+          username: ${{ secrets.actor }}
+          password: ${{ secrets.GITHUB_TOKEN }}
           repository: arvindosub/devops_project
           tag_with_ref: true
