--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -13,17 +13,17 @@ variables:
 
 stages:
 - stage: Build
-  displayName: Build image
+  displayName: Build and Push image
   jobs:  
   - job: Build
-    displayName: Build
+    displayName: Build and Push an Image
     pool:
       vmImage: 'ubuntu-latest'
     steps:
     - task: Docker@2
-      displayName: Build an image
+      displayName: Build and Push an Image
       inputs:
-        command: build
+        command: buildAndPush
         dockerfile: '$(Build.SourcesDirectory)/Dockerfile'
         tags: |
           $(tag)
