--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -15,4 +15,4 @@ jobs:
           username: ${{ secrets.DOCKERHUB_USERNAME }}
           password: ${{ secrets.DOCKERHUB_TOKEN }}
           repository: devops_project
-          dockerfile: '/Dockerfile'
+          dockerfile: 'Dockerfile'
