--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -10,7 +10,8 @@ jobs:
     steps:
       -
         name: Docker Build
-        uses: docker/build-push-action@v2
+        uses: docker/build-push-action@v1.1.1
         with:
           username: ${{ secrets.DOCKERHUB_USERNAME }}
           password: ${{ secrets.DOCKERHUB_TOKEN }}
+          repository: devops_project
