--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -15,3 +15,5 @@ jobs:
           username: ${{ secrets.DOCKERHUB_USERNAME }}
           password: ${{ secrets.DOCKERHUB_TOKEN }}
           repository: devops_project
+          working_directory: '.'
+          dockerfile: Dockerfile
