--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -1,8 +1,6 @@
 name: build-and-push to docker
 
-on:
-  release:
-    types: [published]
+on: push
 
 jobs:
   main:
@@ -15,4 +13,4 @@ jobs:
           username: ${{ secrets.DOCKERHUB_USERNAME }}
           password: ${{ secrets.DOCKERHUB_TOKEN }}
           repository: devops_project
-          dockerfile: ./Dockerfile
+          file: ./Dockerfile
